# px4_ros2_ws

./: .gitignore  fixed_wing_data.csv  start_training.sh
data/vtol_rl/: flight_data_20260324_214745.csv  flight_data_20260324_223853.csv  flight_data_20260324_230712.csv  training_log_20260324_211148.csv  training_log_20260324_223853.csv  training_log_20260324_230712.csv
data/vtol_rl/offboard_logs/: offboard_cmds_20260324_223836.csv  offboard_cmds_20260324_230705.csv
data/vtol_rl/saved_models/: ppo_vtol_fw_20260324_230712.pth
data/vtol_rl/tensorboard_logs/20260324_214745/: events.out.tfevents.1774360065.zhs-R9000P.62582.0
data/vtol_rl/tensorboard_logs/20260324_230712/: events.out.tfevents.1774364832.zhs-R9000P.69410.0
src/rl_fw_controller_cpp/: CMakeLists.txt  package.xml
src/rl_fw_controller_cpp/src/: rl_fw_control_node.cpp
src/uav_data_collector/: CMakeLists.txt  package.xml
src/uav_data_collector/data/: flight_20260305_181945.csv
src/uav_data_collector/src/: data_logger.cpp
src/vtol_rl_ros2/: CMakeLists.txt  package.xml
src/vtol_rl_ros2/launch/: rl_vtol_training.launch.py
src/vtol_rl_ros2/scripts/: collect_expert_data.py  ppo_train_node.py  pretrain_tcn.py
src/vtol_rl_ros2/scripts/envs/: vtol_rl_env.py
src/vtol_rl_ros2/scripts/models/: actor_critic.py
src/vtol_rl_ros2/src/: offboard_actuator_manager.cpp
